# obsidian-notes

./: .gitignore  404.html  CNAME  LICENSE  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
docs/: index.md
docs/related-work/: .nav.yml  A Systematic Literature Review on Fault Prediction Performance in Software Engineering.md  A Systematic Survey of Just-in-Time Software Defect Prediction.md  A large-scale empirical study of just-in-time quality assurance.md  A survey on metric of software complexity.md  An Empirical Study of Refactoring Challenges and Benefits at Microsoft.md  An automatically created novel bug dataset and its validation in bug prediction.md  AutoODC - Automated generation of orthogonal defect classifications.md  JITLine - A Simpler, Better, Faster, Finer-grained Just-In-Time Defect Prediction.md  Software complexity analysis using halstead metrics.md  The Qualitas Corpus - A Curated Collection of Java Code for Empirical Studies.md  Understanding Code Smell Detection via Code Review - A Study of the OpenStack Community.md  Using Cohesion and Coupling for Software Remodularization - Is It Enough?.md  Using Orthogonal Defect Classification to characterize NoSQL database defects.md  index.md
docs/research-papers/: .nav.yml  Do Static Analysis Tools Affect Software Quality when Using Test-driven Development?.md  (+7 more)
related-work/: index.html
research-papers/: index.html
research-proposal/: index.html
research-proposals/: index.html
search/: search_index.json
stylesheets/: extra.css
weekly-reports/: index.html
(+109 files in other folders)
